2007-02-10 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/gsc/GSGState.m (-bezierPath): New method.
	* Source/gsc/GSGState.m (-DPSpathbbox::::): Corrected to use new method.
	* Source/cairo/CairoGState.m (-GSSetPatterColor:,
	-pointInMatrixSpace:, -deltaPointInMatrixSpace:,
	-rectInMatrixSpace:, -DPSarct:, -GSReadRect:): New methods to
	override super implementation.
	* Source/cairo/CairoGState.m (-GSCurrentCTM, -GSConcatCTM:,
	-DPStranslate::, -DPSscale::, -DPSrotate:, -DPSinitmatrix,
	-DPSconcat:) Protect all matrix operation from _ct being NULL.
	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
	Small improvents to both unflipped case.

2007-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/winlib/WIN32FontInfo.m:
	Fix error calculating advancement.

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32FontInfo.m:
	* Source\winlib\GNUmakefile.preamble:
	* Source\win32\GNUmakefile.preamble:
	* Headers\winlib\WIN32FontInfo.h:
	Implement number of glyphs and covered characterset.
	Set maximumAdvancement.

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/ftfont.m: Implement methods to get count of characters
	and characterset based on code by Yen-Ju Chen
	* Source/cairo/CairoFontEnumerator.m: Tidy layout
	* Source/cairo/CairoFaceInfo.m: ditto
	* Source/cairo/CairoFontInfo.m: ditto

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m:
	* Source/win32/GNUmakefile:
	* Source/win32/w32_GLcontext.m:
	* Source/win32/w32_GLformat.m:
	* Headers/win32/WIN32OpenGL.h:
	OpenGL support patch by: Xavier Glattard <xavier.glattard@free.fr>.

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32FontInfo.m: Attempt to make unicode clean
	* Source\winlib\WIN32FontEnumerator.m: ditto
	* Source\win32\WIN32Server.m: Implement -windowlist method.

2007-01-15  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): Set