@@ -1,3 +1,7 @@
+2007-02-11 Fred Kiefer <FredKiefer@gmx.de>
+	
+	* Source/cairo/CairoGState.m (-GSReadRect:): Implemented this method.
+
 2007-02-10 Fred Kiefer <FredKiefer@gmx.de>
 	
 	* Source/gsc/GSGState.m (-bezierPath): New method.
